# ood

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-builder-shell  docker-entrypoint
Exam2/: CMakeLists.txt  main.cpp
Exam2/Window/: IWindowImpl.h
Exam2/WindowImpl/OSX/: CosxWindowImpl.cpp  CosxWindowImpl.h
exam/Bridge/: CMakeLists.txt  main.cpp
exam/Bridge/Window/: CWindow.cpp  CWindow.h
exam/Bridge/Window/Modal/: CModalWindow.cpp  CModalWindow.h
exam/Bridge/Window/Popup/: CPopupWindow.cpp  CPopupWindow.h
exam/Bridge/WindowImpl/OSX/: COSXWindowImpl.cpp
exam/Bridge/WindowImpl/Win32/: CWin32WindowImpl.cpp  CWin32WindowImpl.h
lab1/SimUDuck/: CMakeLists.txt  main.cpp
lab1/SimUDuck/DanceBehaviors/: CDanceMinuet.cpp  CDanceMinuet.h  CDanceNoWay.cpp  CDanceNoWay.h  CDanceWaltz.cpp  CDanceWaltz.h  IDanceBehavior.h
lab1/SimUDuck/Ducks/: CDecoyDuck.cpp  CDuck.cpp  CDuck.h  CMallardDuck.cpp  CMallardDuck.h  CModelDuck.cpp  CRedHeadDuck.cpp  CRedHeadDuck.h  CRedheadDuck.cpp  CRubberDuck.cpp
lab1/SimUDuck/FlyBehaviors/: CFlyNoWay.cpp  CFlyNoWay.h  CFlyWithWings.cpp  CFlyWithWings.h  IFlyBehavior.h
lab1/SimUDuck/QuackBehaviors/: CMuteQuack.cpp  CMuteQuack.h  CQuack.cpp  CQuack.h  CSqueak.cpp  CSqueak.h  IQuackBehavior.h
lab1/SimUDuckFunctional/: CMakeLists.txt  main.cpp
lab1/SimUDuckFunctional/Behaviors/: DanceBehaviors.cpp  DanceBehaviors.h  FlyBehaviors.cpp  FlyBehaviors.h  QuackBehaviors.cpp  QuackBehaviors.h
lab1/SimUDuckFunctional/Ducks/: CDecoyDuck.cpp  CDecoyDuck.h  CDuck.cpp  CDuck.h  CMallardDuck.cpp  CMallardDuck.h  CModelDuck.cpp  CModelDuck.h  CRedheadDuck.cpp  CRedheadDuck.h  CRubberDuck.cpp  CRubberDuck.h
lab2/WeatherStation/: CMakeLists.txt  main.cpp
lab2/WeatherStation/Displays/: CDisplay.cpp  CDisplay.h  CStatsDisplay.cpp  CStatsDisplay.h
lab2/WeatherStation/Observer/: CObservable.hpp
lab2/WeatherStation/WeatherData/: CWeatherData.cpp
lab2/WeatherStation/tests/: CMakeLists.txt  WeatherStation.test.cpp
lab2/WeatherStationDuo/tests/: CMakeLists.txt  WeatherStationDuo.test.cpp
lab2/WeatherStationDuoSignals/tests/: CMakeLists.txt  WeatherStationDuoSignals.test.cpp
lab2/WeatherStationPro/: CMakeLists.txt  main.cpp
lab2/WeatherStationPro/Observer/: CObservable.hpp  IObserver.h
lab2/WeatherStationProDuo/: CMakeLists.txt  main.cpp
lab2/WeatherStationProDuo/Observer/: CObservable.hpp
lab2/WeatherStationProDuo/WeatherData/: CWeatherData.cpp  CWeatherData.h
lab2/WeatherStationProDuo/WeatherDataPro/: CWeatherDataPro.cpp  CWeatherDataPro.h
lab2/WeatherStationProLite/: CMakeLists.txt  main.cpp
lab2/WeatherStationProLite/Observer/: CObservable.hpp  IObservable.h
lab2/WeatherStationProLite/WeatherDataProLite/: CWeatherDataProLite.cpp  CWeatherDataProLite.h
lab3/Coffee/: Beverages.h  CCoffeeShop.cpp  CCoffeeShop.h  CMakeLists.txt  Condiments.h  main.cpp
lab3/Coffee/Beverages/: CBeverage.cpp  CBeverage.h  IBeverage.h
lab3/Coffee/Beverages/Beverage/: CBeverage.h
lab3/Coffee/Condiments/: CCondimentDecorator.cpp  CCondimentDecorator.h  ChocolateSlices.h
lab3/Transform/: CArgumentParser.cpp  CArgumentParser.h  CMakeLists.txt  CTransformer.cpp  CTransformer.h  main.cpp
lab3/Transform/ArgumentParser/: CArgumentParser.cpp  CArgumentParser.h
lab3/Transform/EncryptionTableBuilder/: CEncryptionTableBuilder.cpp  CEncryptionTableBuilder.h
lab3/Transform/InputDataStream/: IInputDataStream.h
lab3/Transform/InputDataStreamDecorator/: CInputDataStreamDecorator.cpp  CInputDataStreamDecorator.h
lab3/Transform/OutputDataStream/: IOutputDataStream.h
lab3/Transform/OutputDataStreamDecorator/: COutputDataStreamDecorator.cpp  COutputDataStreamDecorator.h
lab3/Transform/Transformer/: CTransformer.cpp  CTransformer.h
lab3/Transform/tests/: CMakeLists.txt  Transform.test.cpp  test.txt
lab4/Designer/: CMakeLists.txt  main.cpp
lab4/Designer/Canvas/: CCanvas.cpp  CCanvas.h  ICanvas.h
lab4/Designer/Client/: IDesigner.h  main.cpp
lab4/Designer/Designer/: CDesigner.cpp  CDesigner.h  CPictureDraft.cpp  CPictureDraft.h  IDesigner.h  IShapeFactory.h
lab4/Designer/Painter/: CPainter.cpp  CPainter.h
lab4/Designer/PictureDraft/: CPictureDraft.cpp  CPictureDraft.h
lab4/Designer/ShapeFactory/: CShapeFactory.cpp  CShapeFactory.h
lab4/Designer/Shapes/: CShape.cpp  CShape.h  ShapeTypes.cpp  ShapeTypes.h
lab4/Designer/tests/: CMakeLists.txt  Designer.test.cpp
lab5/Editor/: CMakeLists.txt  main.cpp
lab5/Editor/Command/: ICommand.h
lab5/Editor/Document/: CDocument.cpp  CDocument.h  ICommandExecutor.h  IDocument.h  IHistory.h  ISaver.h
lab5/Editor/DocumentItem/: CConstDocumentItem.cpp  CConstDocumentItem.h  CDocumentItem.cpp  CDocumentItem.h
lab5/Editor/Editor/: CEditor.cpp  CEditor.h  IDocument.h
lab5/Editor/History/: CHistory.cpp  CHistory.h
lab5/Editor/Image/: CImage.cpp  CImage.h  IImage.h
lab5/Editor/Paragraph/: CParagraph.cpp  CParagraph.h  IParagraph.h
lab5/Editor/Saver/: CHtmlSaver.cpp  CHtmlSaver.h  ISaver.h
lab5/Editor/tests/: CMakeLists.txt  Editor.test.cpp
lab6/GraphicsClassAdapter/tests/: CMakeLists.txt  GraphicsClassAdapter.test.cpp
lab7/Slides/: CMakeLists.txt  main.cpp
lab7/Slides/Canvas/: ICanvas.h
lab7/Slides/ShapeCollection/: CShapeCollection.h  CShapeCollectionImpl.h  IShapeCollection.h
lab7/Slides/ShapeGroup/: CShapeGroup.cpp  CShapeGroup.h  IShapeGroup.h
lab7/Slides/Shapes/: IDrawable.h  IGroupShape.h  IShape.h  IShapes.h  IStyle.h  ShapeTypes.h
lab7/Slides/Slide/: CShapeCollectionImpl.h  CSlide.cpp  CSlide.h  IShape.h  IShapeCollection.h  ISlide.h
lab7/Slides/Style/: CStyleImpl.h  IOutlineStyle.h  IStyle.h
lab7/Slides/Styles/: CStyleImpl.h  IStyle.h
lab7/Slides/tests/: CMakeLists.txt  Slides.test.cpp
lab8/GumballMachine/: CMakeLists.txt  main.cpp
lab8/GumballMachine/GumballMachine/: CGumballMachine.cpp  CGumballMachine.h  IGumballMachine.h
lab8/GumballMachine/Menu/: CMenu.cpp  CMenu.h
lab8/GumballMachine/State/: IGumballMachine.h  IState.h
lab8/GumballMachine/tests/: CMakeLists.txt  GumballMachine.test.cpp
(+240 files in other folders)
