add_executable(ExamBridge
               main.cpp
               Window/IWindowImpl.h
               WindowImpl/Win32/CWin32WindowImpl.cpp
               WindowImpl/Win32/CWin32WindowImpl.h
               WindowImpl/OSX/COSXWindowImpl.cpp
               WindowImpl/OSX/COSXWindowImpl.h
               Window/CWindow.cpp
               Window/CWindow.h
               Window/Popup/CPopupWindow.cpp
               Window/Popup/CPopupWindow.h
               Window/Modal/CModalWindow.cpp
               Window/Modal/CModalWindow.h)
