add_executable(SimUDuck
               FlyBehaviors/IFlyBehavior.h
               FlyBehaviors/CFlyWithWings.h
               FlyBehaviors/CFlyWithWings.cpp
               QuackBehaviors/IQuackBehavior.h
               QuackBehaviors/CQuack.h
               QuackBehaviors/CQuack.cpp
               DanceBehaviors/IDanceBehavior.h
               DanceBehaviors/CDanceWaltz.h
               DanceBehaviors/CDanceWaltz.cpp
               DanceBehaviors/CDanceMinuet.h
               DanceBehaviors/CDanceMinuet.cpp
               Ducks/CDuck.h
               Ducks/CDuck.cpp
               Ducks/CMallardDuck.h
               Ducks/CMallardDuck.cpp
               Ducks/CRedHeadDuck.h
               Ducks/CRedHeadDuck.cpp
               main.cpp)
