add_executable(SimUDuck
               FlyBehaviors/IFlyBehavior.h
               FlyBehaviors/CFlyWithWings.h
               FlyBehaviors/CFlyWithWings.cpp
               FlyBehaviors/CFlyNoWay.h
               FlyBehaviors/CFlyNoWay.cpp
               QuackBehaviors/IQuackBehavior.h
               QuackBehaviors/CQuack.h
               QuackBehaviors/CQuack.cpp
               QuackBehaviors/CSqueak.h
               QuackBehaviors/CSqueak.cpp
               QuackBehaviors/CMuteQuack.h
               QuackBehaviors/CMuteQuack.cpp
               DanceBehaviors/IDanceBehavior.h
               DanceBehaviors/CDanceWaltz.h
               DanceBehaviors/CDanceWaltz.cpp
               DanceBehaviors/CDanceMinuet.h
               DanceBehaviors/CDanceMinuet.cpp
               Ducks/CDuck.h
               Ducks/CDuck.cpp
               Ducks/CMallardDuck.h
               Ducks/CMallardDuck.cpp
               Ducks/CRedheadDuck.h
               Ducks/CRedheadDuck.cpp
               Ducks/CRubberDuck.h
               Ducks/CRubberDuck.cpp
               Ducks/CDecoyDuck.h
               Ducks/CDecoyDuck.cpp
               main.cpp)
