add_executable(Coffee
               Beverages/IBeverage.h
               Beverages/CBeverage.h
               Beverages/CBeverage.cpp
               Beverages/Coffee/CCoffee.h
               Beverages/Coffee/CCoffee.cpp
               Beverages/Cappuccino/CCappuccino.h
               Beverages/Cappuccino/CCappuccino.cpp
               Beverages/Latte/CLatte.h
               Beverages/Latte/CLatte.cpp
               Beverages/Tea/CTea.h
               Beverages/Tea/CTea.cpp
               Beverages/Milkshake/CMilkshake.h
               Beverages/Milkshake/CMilkshake.cpp
               main.cpp Condiments/CCondimentDecorator.cpp Condiments/CCondimentDecorator.h Condiments/Cinnamon/CCinnamon.cpp Condiments/Cinnamon/CCinnamon.h Condiments/Lemon/CLemon.cpp Condiments/Lemon/CLemon.h Condiments/IceCubes/CIceCubes.cpp Condiments/IceCubes/CIceCubes.h Condiments/Syrup/CSyrup.cpp Condiments/Syrup/CSyrup.h Condiments/ChocolateCrumbs/CChocolateCrumbs.cpp Condiments/ChocolateCrumbs/CChocolateCrumbs.h Condiments/CoconutFlakes/CCoconutFlakes.cpp Condiments/CoconutFlakes/CCoconutFlakes.h Beverages/Coffee/CPortionedCoffee.cpp Beverages/Coffee/CPortionedCoffee.h)
