add_executable(Coffee
               Beverages/IBeverage.h
               Beverages/CBeverage.h
               Beverages/CBeverage.cpp
               Beverages/Coffee/CCoffee.h
               Beverages/Coffee/CCoffee.cpp
               Beverages/Cappuccino/CCappuccino.h
               Beverages/Cappuccino/CCappuccino.cpp
               Beverages/Latte/CLatte.h
               Beverages/Latte/CLatte.cpp
               Beverages/Tea/CTea.h
               Beverages/Tea/CTea.cpp
               Beverages/Milkshake/CMilkshake.h
               Beverages/Milkshake/CMilkshake.cpp
               Condiments/CCondimentDecorator.h
               main.cpp Condiments/CCondimentDecorator.cpp
               Condiments/Cinnamon/CCinnamon.h
               Condiments/Cinnamon/CCinnamon.cpp
               Condiments/Lemon/CLemon.h
               Condiments/Lemon/CLemon.cpp
               Condiments/IceCubes/CIceCubes.h
               Condiments/IceCubes/CIceCubes.cpp
               Condiments/Syrup/CSyrup.h
               Condiments/Syrup/CSyrup.cpp
               Condiments/ChocolateCrumbs/CChocolateCrumbs.h
               Condiments/ChocolateCrumbs/CChocolateCrumbs.cpp
               Condiments/CoconutFlakes/CCoconutFlakes.h
               Condiments/CoconutFlakes/CCoconutFlakes.cpp
               Beverages/Coffee/CPortionedCoffee.h
               Beverages/Coffee/CPortionedCoffee.cpp
               Condiments/Cream/CCream.h
               Condiments/Cream/CCream.cpp
               Condiments/ChocolateSlices.h
               Condiments/ChocolateSlices.cpp
               Condiments/Liqueur/CLiqueur.h
               Condiments/Liqueur/CLiqueur.cpp)
