add_executable(Transform
               main.cpp
               CArgumentParser.cpp
               CArgumentParser.h
               CTransformer.cpp
               CTransformer.h
               OutputDataStream/IOutputDataStream.h
               OutputDataStream/FileOutputStream/CFileOutputStream.cpp
               OutputDataStream/FileOutputStream/CFileOutputStream.h
               InputDataStream/IInputDataStream.h
               InputDataStream/FileInputStream/CFileInputStream.cpp
               InputDataStream/FileInputStream/CFileInputStream.h
               InputDataStreamDecorator/CInputDataStreamDecorator.cpp
               InputDataStreamDecorator/CInputDataStreamDecorator.h
               InputDataStreamDecorator/DecryptingInputDataStream/CDecryptingInputStream.cpp
               InputDataStreamDecorator/DecryptingInputDataStream/CDecryptingInputStream.h
               OutputDataStreamDecorator/COutputDataStreamDecorator.cpp
               OutputDataStreamDecorator/COutputDataStreamDecorator.h
               OutputDataStreamDecorator/EncryptingOutputDataStream/CEncryptingOutputStream.cpp
               OutputDataStreamDecorator/EncryptingOutputDataStream/CEncryptingOutputStream.h)
