add_executable(Slides
               main.cpp
               Common/App/ICanvas.h
               Common/Infrastructure/SVG/CCanvas.cpp
               Common/Infrastructure/SVG/CCanvas.h
               Shapes/ShapeTypes.h
               Common/App/IDrawable.h
               Shapes/IShape.h
               Shapes/Shape/CShape.cpp
               Shapes/Shape/CShape.h
               Shapes/Rectangle/CRectangle.cpp
               Shapes/Rectangle/CRectangle.h
               Shapes/Ellipse/CEllipse.cpp
               Shapes/Ellipse/CEllipse.h
               Shapes/Triangle/CTriangle.cpp
               Shapes/Triangle/CTriangle.h
               Shapes/IStyle.h
               Shapes/IOutlineStyle.h
               Style/CStyleImpl.h
               Style/FillStyle/CFillStyle.h
               Style/OutlineStyle/COutlineStyle.cpp
               Style/OutlineStyle/COutlineStyle.h
               Style/GroupStyles/GroupFillStyle/CGroupFillStyle.cpp
               Style/GroupStyles/GroupFillStyle/CGroupFillStyle.h
               Style/GroupStyles/GroupOutlineStyle/CGroupOutlineStyle.cpp
               Style/GroupStyles/GroupOutlineStyle/CGroupOutlineStyle.h
               ShapeGroup/IShapeGroup.h
               ShapeGroup/CShapeGroup.cpp
               ShapeGroup/CShapeGroup.h)

add_subdirectory(tests)
